2006-??-?? : 1.5
	(TODO) continuations
	(TODO) threading api
	neko web server : get_client_header is now case-insensitive

2006-10-09 : 1.4.5
	sqlite : added BOOL handling
	jit : added mmap support (for execution protection)
	jit : fixed bug when unsupported operation exception
	vm : fixed bug in debug infos reading when nfiles > 255
	vm : fixed bug in interp -> jit call
	vm : default NEKOPATH is now the same on OSX/Linux
	vm : optimized debug infos runtime memory size
	std : added misc.c (float & double bytes manipulations + gc/vm functions)
	std : fixed buf in sys_read_dir on windows (directory not closed correctly)
	std : added sys_getch, sys_get_pid
	std : fixed socket_host (was returning the same as socket_peer)
	std : improved performances of serialize/unserialize
	allowed break & continues in try/catch if they don't break outside
	nekoml : fixed bug in lexer allocating too bug memory when small reads
	nekotools : bugfixes in server, added static file streaming
	nekotools : fixed boot for universal binaries
	mod_neko : minor updates for better memory handling
	mod_neko : use soft timeout for Apache 1.3

2006-08-02 : 1.4
	std : added a SO_REUSEADDR before socket_bind (except windows)
	nekoc/nekovm : allowed more than 127 filenames in debug infos
	nekotools server : added -rewrite for mod_rewrite'style urls
	added zlib wrapper
	mod_neko for apache 2.0
	added sqlite wrapper
	std : fixed socket_set_timeout (changed unit from millisec to seconds)
	std : fixed math_pow (integer overflow) , fixed readdir (missing closedir on Linux)
	added PPC registers
	neko.h : added NEKO_* OS/CPU flags
	added JIT for x86
	vm : (int mod 0) is now an exception (and not NaN)
	neko.h : added kind_import and kind_export to share abstracts between libraries
	std : handle signals in socket send and recv
	allowed OSX universal build
	added $setresolver for unknown object field handling

2006-05-11 : 1.3
	neko : fixed endianness bug needed to boot, exported neko_is_big_endian