@@ -2,6 +2,8 @@
 	(TODO) continuations
 	(TODO) threading api
 	neko web server : get_client_header is now case-insensitive
+	std : new thread and lock api
+	neko : when run from commandline, SEGV on Linux are turned into exceptions
 
 2006-10-09 : 1.4.5
 	sqlite : added BOOL handling
